syntax = "proto3";

package np2ps;
import "articles.proto";

message NewspaperEntry {
    uint64 news_id = 1;
    string news_name = 2;
    repeated uint64 authorities = 4;
}

message NetworkSerializedNewspaperEntry {
    NewspaperEntry entry = 1;
    repeated Article articles = 3;
}

message LocalSerializedNewspaperEntry {
    NewspaperEntry entry = 1;
    repeated SerializedArticle articles = 2;
}
