syntax = "proto3";

package np2ps;
import "newspaper_entry.proto";
import "ip_map.proto";

message Peer {
    uint64 public_identifier = 1;
    string name = 2;
    IpMap ip_map = 4; //networking
    repeated LocalSerializedNewspaperEntry news = 3;
}
